--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "19.2.0",
     "react-intersection-observer": "^10.0.0",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
